# heif2jpg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cc
cmake/modules/: FindJPEG.cmake
tests/: some_tests.cc
